Fix vertical alignment of user avatar in the menu

--- a/engine-wizard/scss/_layout.scss
+++ b/engine-wizard/scss/_layout.scss
@@ -183,6 +183,10 @@ body {
                     align-items: baseline;
                     justify-content: space-between;
                 }
+
+                &.user-profile {
+                    align-items: center;
+                }
             }
 
             .sidebar-link {
